<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="standalone_app_label" translatable="false">Seshat Calendar</string>
    <string name="app_label">Calendar</string>
    <string name="when_label">When</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">"Today at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="tomorrow_at_time_fmt">"Tomorrow at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="date_time_fmt">"<xliff:g id="date">%1$s</xliff:g>, <xliff:g id="time_interval">%2$s</xliff:g>"</string>
    <string name="no_title_label">(No title)</string>
    <plurals name="Nminutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nmins">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="Nhours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Ndays">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="weekN">
        
        <item quantity="other">Week <xliff:g id="count">%d</xliff:g></item>
    </plurals>
    <string name="calendar_refresh">"Refresh"</string>
    <string name="show_day_view">"Show day"</string>
    <string name="agenda_view_events">"Agenda"</string>
    <string name="agenda_view_tasks">"Tasks"</string>
    <string name="agenda_view_search_results">Agenda</string>
    <string name="day_view">"Day"</string>
    <string name="week_view">"Week"</string>
    <string name="month_view">"Month"</string>
    <string name="event_view">"View event"</string>
    <string name="event_create">"New event"</string>
    <string name="event_edit">"Edit event"</string>
    <string name="event_delete">"Delete event"</string>
    <string name="share_label">Share</string>
    <string name="goto_today">"Today"</string>
    <string name="goto_date">Go to\u2026</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="search">"Search"</string>
    <string name="hide_controls">"Hide controls"</string>
    <string name="show_controls">"Show controls"</string>
    <string name="view_settings">"View settings"</string>
    <string name="select_synced_calendars_button">Calendars to sync</string>
    <string name="hint_what">"Event name"</string>
    <string name="hint_where">"Location"</string>
    <string name="hint_description">"Description"</string>
    <string name="hint_attendees">"Guests"</string>
    <string name="creating_event">"Event created."</string>
    <string name="saving_event">"Event saved."</string>
    <string name="empty_event">"Empty event not created."</string>
    <string name="creating_event_with_guest">"Invitations will be sent."</string>
    <string name="saving_event_with_guest">"Updates will be sent."</string>
    <string name="rsvp_accepted">"Responded yes."</string>
    <string name="rsvp_tentative">"Responded maybe."</string>
    <string name="rsvp_declined">"Responded no."</string>
    <string name="create_event_dialog_save">Save</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="foreground_notification_channel_name">Alert sync</string>
    <string name="foreground_notification_channel_description">Foreground notification required for internal alert sync.</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Add reminder</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">Before you can add an event, you must add at least one Calendar account to your device and make a calendar visible. Touch Add Account to add an account (if you just added an account, wait for it to finish syncing and try again). Or touch Cancel and make sure at least one calendar is visible.</string>
    <string name="add_account">Add account</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="choose_event_color_label">Choose event color</string>
    <string name="event_color_picker_dialog_title">Event Color</string>
    <string name="event_color_set_to_default">Set to default calendar color</string>
    <string name="calendar_color_picker_dialog_title">Calendar Color</string>
    <string name="calendar_square_color_picker_description">Color picker</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="response_yes">Yes</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="email_guests_label">Email guests</string>
    <string name="email_organizer_label">Email organizer</string>
    <string name="email_picker_label">Email with</string>
    <string name="email_subject_prefix" translatable="false">Re:\u0020</string>
    <string name="event_not_found">"Event not found."</string>
    <string name="map_label">Map</string>
    <string name="no_map">There is no maps app installed</string>
    <string name="call_label">Call</string>
    <string name="quick_response_settings">Quick responses</string>
    <string name="quick_response_settings_summary">Edit default responses when emailing guests</string>
    <string name="quick_response_settings_edit_title">Quick response</string>
    <string name="quick_response_dialog_title">Choose quick response</string>
    <string name="quick_response_email_failed">Failed to find an email program</string>
    <string-array name="quick_response_defaults">
        <item>Running just a couple of minutes late.</item>
        <item>Be there in about 10 minutes.</item>
        <item>Go ahead and start without me.</item>
        <item>Sorry, I can\'t make it. We\'ll have to reschedule.</item>
    </string-array>
    <string name="quick_response_custom_msg">Write your own\u2026</string>
    <string name="event_info_organizer">Organizer:</string>
    <string name="event_info_reminders_label">Reminders</string>
    <string name="agenda_today">Today, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_yesterday">Yesterday, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_tomorrow">Tomorrow, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="loading">Loading\u2026</string>
    <string name="show_older_events">Touch to view events before <xliff:g id="oldest_search_range">%1$s</xliff:g></string>
    <string name="show_newer_events">Touch to view events after <xliff:g id="newest_search_range">%1$s</xliff:g></string>
    <string name="search_title">Search my calendars</string>
    <string name="edit_event_label">"Details"</string>
    <string name="edit_label">"Edit"</string>
    <string name="delete_label">"Delete"</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Cancel</string>
    <string name="dismiss_all_label">"Dismiss all"</string>
    <string name="snooze_label">"Snooze"</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="endByDate">; until <xliff:g id="date">%s</xliff:g></string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_color">Primary color</string>
    <string name="preferences_pure_black_night_mode">Pure black night mode</string>
    <string name="preferences_reminder_title">Notifications \u0026 reminders</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="display_options">Display options</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_default" translatable="false">-1</string>
    <string name="preferences_days_per_week_title">Days per week</string>
    <string name="preferences_days_per_week_dialog">Days per week</string>
    <string name="preferences_days_per_week_default" translatable="false">7</string>
    <string name="preferences_default_event_duration_title">Default event duration</string>
    <string name="preferences_clear_search_history_title">Clear search history</string>
    <string name="preferences_clear_search_history_summary">Remove all the searches you\'ve performed</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_alarm_alerts_title">Alarm Notifications</string>
    <string name="preferences_alarm_alerts_explanation">Events with #alarm tag anywhere in the title or description would use this notification category.\nIt uses Alarm sound stream, thus on many devices would produce sound notification even in silent mode.\nOn top of that, notification sound would be repeated every few minutes.\nAdditionally you can enable this notification channel to bypass DND mode if you wish to get always notified about events marked with #alarm.</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_all_day_reminder_title">Default reminder for all-day events</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_all_day_reminder_dialog">Default reminder time (all day events)</string>
    <string name="preferences_default_reminder_default">15</string>
    <string name="preferences_default_all_day_reminder_default">960</string>
    <string name="preferences_use_home_tz_title">Use home time zone</string>
    <string name="preferences_use_home_tz_descrip">Displays calendars and event times in your home time zone when traveling</string>
    <string name="preferences_home_tz_title">Home time zone</string>
    <string name="preferences_home_tz_default" translatable="false">America/Los_Angeles</string>
    <string name="preferences_show_week_num_title">Show week number</string>
    <string name="preferences_menu_about">About Seshat</string>
    <string name="handle_events_with_no_reminders">Handle events with no reminders</string>
    <string name="handle_events_with_no_reminders_summary">Notify about events with no reminder added</string>
    <string name="handle_email_only_events_title">Handle e-mail only events</string>
    <string name="handle_email_only_events_summary">Notify locally about events with email-only reminders</string>
    <string name="next_day">Next Day</string>
    <string name="next_week">Next Week</string>
    <string name="next_month_30d">Next Month (+30d)</string>
    <string name="copy_next_day">Next Day (copy inst.)</string>
    <string name="copy_next_week">Next Week (copy inst.)</string>
    <string name="copy_next_month_30d">Next Month (+30d) (copy inst.)</string>
    <string name="menu_home">Notifications</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_date_copy_inst">Pick a date (copy inst.)</string>
    <string name="task_notifications">Task Notifications</string>
    <string name="task_notifications_summary">Events with calendar configured as \'treat as tasks\' will use this channel</string>
    <string name="privacy_policy_menu_item">Privacy Policy</string>
</resources>