<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/preferences_general_title">
        <ListPreference
            app:key="pref_theme"
            app:title="@string/preferences_theme"
            app:entries="@array/pref_theme_entries"
            app:entryValues="@array/pref_theme_values"
            app:defaultValue="black" />
        <CheckBoxPreference
            app:defaultValue="false"
            app:key="pref_pure_black_night_mode"
            app:title="@string/preferences_pure_black_night_mode" />
        <Preference
            app:key="pref_color"
            app:title="@string/preferences_color"
            app:entries="@array/pref_color_entries"
            app:entryValues="@array/pref_color_values"
            app:defaultValue="teal" />
        <Preference
            app:key="pref_view_details"
            app:title="@string/display_options"
            app:fragment="com.android.calendar.settings.ViewDetailsPreferences" />
        <CheckBoxPreference
            app:key="preferences_hide_declined"
            app:defaultValue="false"
            app:title="@string/preferences_hide_declined_title" />
        <CheckBoxPreference
            app:key="preferences_show_week_num"
            app:defaultValue="false"
            app:title="@string/preferences_show_week_num_title" />
        <ListPreference
            app:key="preferences_week_start_day"
            app:defaultValue="@string/preferences_week_start_day_default"
            app:title="@string/preferences_week_start_day_title"
            app:entries="@array/preferences_week_start_day_labels"
            app:entryValues="@array/preferences_week_start_day_values"
            app:dialogTitle="@string/preferences_week_start_day_dialog" />
        <ListPreference
            app:key="preferences_days_per_week"
            app:defaultValue="@string/preferences_days_per_week_default"
            app:title="@string/preferences_days_per_week_title"
            app:entries="@array/preferences_days_per_week_labels"
            app:entryValues="@array/preferences_days_per_week_values"
            app:dialogTitle="@string/preferences_days_per_week_dialog" />
        <ListPreference
            app:key="preferences_default_event_duration"
            app:defaultValue="60"
            app:title="@string/preferences_default_event_duration_title"
            app:entries="@array/preferences_default_duration_labels"
            app:entryValues="@array/preferences_default_duration_values" />
        <CheckBoxPreference
            app:key="preferences_home_tz_enabled"
            app:defaultValue="false"
            app:title="@string/preferences_use_home_tz_title"
            app:summary="@string/preferences_use_home_tz_descrip" />
        <Preference
            app:key="preferences_home_tz"
            app:dependency="preferences_home_tz_enabled"
            app:defaultValue="@string/preferences_home_tz_default"
            app:title="@string/preferences_home_tz_title" />
        <Preference
            app:key="preferences_clear_search_history"
            app:title="@string/preferences_clear_search_history_title"
            app:summary="@string/preferences_clear_search_history_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="preferences_alerts_category"
        app:title="@string/preferences_reminder_title">
        <Preference
            app:key="preferences_notification"
            app:title="@string/preferences_alerts_title" />

        <Preference
            app:key="preferences_notification_task"
            app:title="@string/task_notifications"
            app:summary="@string/task_notifications_summary"/>

        <Preference
            app:key="preferences_notification_alarm"
            app:title="@string/preferences_alarm_alerts_title"
            app:summary="@string/preferences_alarm_alerts_explanation"/>


        <ListPreference
            app:key="preferences_default_reminder"
            app:defaultValue="@string/preferences_default_reminder_default"
            app:title="@string/preferences_default_reminder_title"
            app:entries="@array/preferences_default_reminder_labels"
            app:entryValues="@array/preferences_default_reminder_values"
            app:dialogTitle="@string/preferences_default_reminder_dialog" />

        <ListPreference
            app:key="preferences_default_all_day_reminder"
            app:defaultValue="@string/preferences_default_all_day_reminder_default"
            app:title="@string/preferences_default_all_day_reminder_title"
            app:entries="@array/preferences_default_all_day_reminder_labels"
            app:entryValues="@array/preferences_default_all_day_reminder_values"
            app:dialogTitle="@string/preferences_default_all_day_reminder_dialog" />

        <CheckBoxPreference
            app:key="preferences_handle_email_only_events"
            app:defaultValue="false"
            app:title="@string/handle_email_only_events_title"
            app:summary="@string/handle_email_only_events_summary" />

        <CheckBoxPreference
            app:key="preferences_handle_events_with_no_reminders"
            app:defaultValue="false"
            app:title="@string/handle_events_with_no_reminders"
            app:summary="@string/handle_events_with_no_reminders_summary" />

    </PreferenceCategory>

</PreferenceScreen>
