<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_move_next_day" android:title="@string/next_day" />
    <item android:id="@+id/action_move_next_week" android:title="@string/next_week" />
    <item android:id="@+id/action_move_next_month_30d" android:title="@string/next_month_30d" />

    <item android:id="@+id/action_move_copy_next_day" android:title="@string/copy_next_day" />
    <item android:id="@+id/action_move_copy_next_week" android:title="@string/copy_next_week" />
    <item android:id="@+id/action_move_copy_next_month_30d" android:title="@string/copy_next_month_30d" />

    <item android:id="@+id/action_move_pick_a_date" android:title="@string/pick_a_date" android:visible="false" />
    <item android:id="@+id/action_move_copy_pick_a_date" android:title="@string/pick_a_date_copy_inst"  android:visible="false"  />

</menu>