<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_view_agenda_white_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/agenda_events_menu_item"
            android:icon="@drawable/ic_menu_agenda_view"
            android:title="@string/agenda_view_events" />
        <item
            android:id="@+id/agenda_tasks_menu_item"
            android:icon="@drawable/ic_menu_agenda_view"
            android:title="@string/agenda_view_tasks" />

        <item
            android:id="@+id/day_menu_item"
            android:checked="true"
            android:icon="@drawable/ic_menu_day_view"
            android:title="@string/day_view" />
        <item
            android:id="@+id/week_menu_item"
            android:icon="@drawable/ic_menu_week_view"
            android:title="@string/week_view" />
        <item
            android:id="@+id/month_menu_item"
            android:icon="@drawable/ic_menu_month_view"
            android:title="@string/month_view" />
    </group>

    <group android:id="@+id/navigation_subheader"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_settings"
            android:alphabeticShortcut="s"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_preferences" />

        <item
            android:id="@+id/action_privacy_policy"
            android:icon="@drawable/ic_info"
            android:title="@string/privacy_policy_menu_item" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info"
            android:title="@string/preferences_menu_about" />
    </group>

</menu>
